Colaboratory を使用して作成しました

--- a/chainer12matplotlib.ipynb
+++ b/chainer12matplotlib.ipynb
@@ -6,6 +6,7 @@
       "name": "chainer12matplotlib.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,9 +46,11 @@
       "source": [
         "# Matplotlib 入門\n",
         "\n",
-        "グラフの描画を行う際は [Matplotlib](https://matplotlib.org/) が便利です。\n",
-        "Colab では標準で Matplotlib を使ってプロットを行うと描画結果がノートブック上に表示されます。\n",
-        "Matplotlib は `matplotlib.pyplot` を `plt` という別名をつけて読み込むのが一般的です。"
+        "https://matplotlib.org/\n",
+        "\n",
+        "Matplotlib は `matplotlib.pyplot` を `plt` という別名をつけて読み込む。\n",
+        "\n",
+        "&nbsp;\n"
       ]
     },
     {
@@ -56,7 +59,6 @@
         "id": "dehoAfTINPN-"
       },
       "source": [
-        "%matplotlib inline\n",
         "import matplotlib.pyplot as plt"
       ],
       "execution_count": null,
@@ -68,10 +70,13 @@
         "id": "nD6RSWpgWBpz"
       },
       "source": [
-        "この章で用いるデータセットは前章と同じように Colab で用意されているサンプルデータを使用します。\n",
-        "Colab 以外で実行する場合は、[こちら](https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv)からデータをダウンロードして、`sample_data` というディレクトリ以下に設置してください。\n",
+        "この章で用いるデータセットは前章と同じように Colab で用意されているサンプルデータを使用する。\n",
         "\n",
-        "まず、Pandas で CSV ファイルを読み込みます。"
+        "Colab 以外で実行する場合は、https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv からデータをダウンロードして、`sample_data` というディレクトリ以下に設置する。\n",
+        "\n",
+        "まず、Pandas で CSV ファイルを読み込む。\n",
+        "\n",
+        "&nbsp;\n"
       ]
     },
     {
@@ -216,12 +221,12 @@
         "id": "encTBRXeF51v"
       },
       "source": [
-        "## 散布図\n",
+        "**散布図**\n",
         "\n",
-        "**散布図 (scatter)** は変数間の相関を視覚的に確認したり、データのばらつきや値の範囲を視覚的に確認するのに便利なものです。\n",
-        "Matplotlib では与えられた配列から散布図を作成する `plt.scatter()` が用意されています。\n",
+        "**散布図 (scatter)** は変数間の相関を視覚的に確認したり、データのばらつきや値の範囲を視覚的に確認するのに便利なものである。\n",
+        "Matplotlib では与えられた配列から散布図を作成する `plt.scatter()` が用意されている。\n",
         "\n",
-        "まずは、`median_income` 列のデータと `median_house_value` 列のデータをそれぞれ横軸、縦軸に取った散布図を描画してみましょう。"
+        "まずは、`median_income` 列のデータと `median_house_value` 列のデータをそれぞれ横軸、縦軸に取った散布図を描画してみる。"
       ]
     },
     {
@@ -272,7 +277,7 @@
         "id": "_hhQe5iJiqZ1"
       },
       "source": [
-        "次に、`pupulation` 列の値と `median_house_value` 列の値をそれぞれ横軸と縦軸にとった散布図を描画します。"
+        "次に、`pupulation` 列の値と `median_house_value` 列の値をそれぞれ横軸と縦軸にとった散布図を描画する。"
       ]
     },
     {
@@ -325,9 +330,9 @@
       "source": [
         "## ヒストグラム\n",
         "\n",
-        "データ中にどのような値がよく登場しているかという値ごとの頻度を確認するために使われるものに**ヒストグラム (histogram)** があります。\n",
+        "データ中にどのような値がよく登場しているかという値ごとの頻度を確認するために使われるものに**ヒストグラム (histogram)** がある。\n",
         "\n",
-        "試しに、`median_house_values` 列の値のヒストグラムを描画してみましょう。"
+        "試しに、`median_house_values` 列の値のヒストグラムを描画してみる。"
       ]
     },
     {
@@ -382,11 +387,11 @@
         "id": "RCNk4OZxiqZ2"
       },
       "source": [
-        "上図の棒グラフ 1 つ 1 つの青い棒は、**ビン (bin)** と呼ばれ、それぞれの高さはある値の範囲に入っているサンプルの数を表します。\n",
-        "ヒストグラムでは値の範囲を複数指定し、それぞれの範囲に入っているサンプルの個数を描画します。\n",
-        "そのため、その値の範囲の指定を `bins` という引数を用いて行う必要があります。\n",
-        "ただし、この引数はオプショナルなもので、何も与えなかった場合はビンの数が自動的に決定されます。\n",
-        "この引数に整数を与えた場合は、`bins` 個のビンを値の範囲に対して等間隔に作成します。"
+        "上図の棒グラフ 1 つ 1 つの青い棒は、**ビン (bin)** と呼ばれ、それぞれの高さはある値の範囲に入っているサンプルの数を表す。\n",
+        "ヒストグラムでは値の範囲を複数指定し、それぞれの範囲に入っているサンプルの個数を描画する。\n",
+        "そのため、その値の範囲の指定を `bins` という引数を用いて行う必要がある。\n",
+        "ただし、この引数はオプショナルなもので、何も与えなかった場合はビンの数が自動的に決定される。\n",
+        "この引数に整数を与えた場合は、`bins` 個のビンを値の範囲に対して等間隔に作成する。"
       ]
     },
     {
@@ -400,7 +405,7 @@
         "outputId": "48897d79-b31f-41b7-c08b-6237274590da"
       },
       "source": [
-        "# bins 引数に値を指定することで、ビンの数を指定できます\n",
+        "# bins 引数に値を指定することで、ビンの数を指定できる\n",
         "plt.hist(df['median_house_value'], bins=50)"
       ],
       "execution_count": null,
@@ -452,7 +457,7 @@
         "id": "wdyahvtpP-Lq"
       },
       "source": [
-        "上図から、`median_house_value` が 500,000 付近の値をとるサンプルが突出して多く存在していることが分かります。"
+        "上図から、`median_house_value` が 500,000 付近の値をとるサンプルが突出して多く存在していることが分かる。"
       ]
     },
     {
@@ -463,9 +468,9 @@
       "source": [
         "## 箱ひげ図\n",
         "\n",
-        "**箱ひげ図 (box plot)** は、値のばらつきをわかりやすく表現するための図です。\n",
-        "`df.describe()` で確認できるような、いくつかの統計値をまとめて可視化するものです。\n",
-        "箱ひげ図は、**五数要約 （five-number summary）** と呼ばれる以下の統計量をまとめて表すものです。\n",
+        "**箱ひげ図 (box plot)** は、値のばらつきをわかりやすく表現するための図である。\n",
+        "`df.describe()` で確認できるような、いくつかの統計値をまとめて可視化するものである。\n",
+        "箱ひげ図は、**五数要約 （five-number summary）** と呼ばれる以下の統計量をまとめて表すものである。\n",
         "\n",
         "- 最小値 (minimum)\n",
         "- 第 1 四分位点 (lower quartile)\n",
@@ -473,7 +478,7 @@
         "- 第 3 四分位点 (upper quartile)\n",
         "- 最大値 (maximum)\n",
         "\n",
-        "描画には、`plt.boxplot()` を用います。"
+        "描画には、`plt.boxplot()` を用いる。"
       ]
     },
     {
@@ -536,7 +541,7 @@
         "outputId": "6a67c378-46ef-4b9a-ef8d-d5e24c9578fa"
       },
       "source": [
-        "# 複数指定する場合は、タプルを用います\n",
+        "# 複数指定する場合は、タプルを用いる\n",
         "plt.boxplot((df['total_bedrooms'], df['population']))"
       ],
       "execution_count": null,
@@ -590,12 +595,12 @@
       "source": [
         "## 折れ線グラフ\n",
         "\n",
-        "折れ線グラフは、時系列データなどを表示する際に便利なグラフです。\n",
-        "`plt.plot()` を用いて描画します。\n",
+        "折れ線グラフは、時系列データなどを表示する際に便利なグラフである。\n",
+        "`plt.plot()` を用いて描画する。\n",
         "\n",
-        "`plt.plot(y)` のように引数が 1 つの場合は、`y` の要素が縦軸の値に対応し、 横軸は要素のインデックスとなります。\n",
+        "`plt.plot(y)` のように引数が 1 つの場合は、`y` の要素が縦軸の値に対応し、 横軸は要素のインデックスとなる。\n",
         "\n",
-        "それでは、NumPy を用いて作成したデータを、`plt.plot()` で表示してみましょう。"
+        "それでは、NumPy を用いて作成したデータを、`plt.plot()` で表示してみる。"
       ]
     },
     {
@@ -663,7 +668,7 @@
         "id": "9mnZNcn_TwYN"
       },
       "source": [
-        "`plt.plot(x, y)` のように引数を 2 つ与える場合は、`x` が横軸、`y` が縦軸に対応します。"
+        "`plt.plot(x, y)` のように引数を 2 つ与える場合は、`x` が横軸、`y` が縦軸に対応する。"
       ]
     },
     {
@@ -716,7 +721,7 @@
       "source": [
         "## グラフの調整\n",
         "\n",
-        "Matplotlib では横軸や縦軸に文字列でラベルを指定したり、グラフの大きさの調整、また直線・曲線・点の色や大きさ、文字の色や大きさの調整など、様々な見た目に関する設定を細かく指定することができます。"
+        "Matplotlib では横軸や縦軸に文字列でラベルを指定したり、グラフの大きさの調整、また直線・曲線・点の色や大きさ、文字の色や大きさの調整など、様々な見た目に関する設定を細かく指定することができる。"
       ]
     },
     {
@@ -727,9 +732,9 @@
       "source": [
         "## seaborn\n",
         "\n",
-        "統計図の作成を簡単に行えるように Matplotlib をベースに作られたライブラリに [seaborn](https://seaborn.pydata.org/) というものがあります。\n",
+        "統計図の作成を簡単に行えるように Matplotlib をベースに作られたライブラリに [seaborn](https://seaborn.pydata.org/) というものがある。\n",
         "\n",
-        "`seaborn` パッケージは、`sns` という別名で読み込まれるのが一般的です。"
+        "`seaborn` パッケージは、`sns` という別名で読み込まれるのが一般的である。"
       ]
     },
     {
@@ -749,7 +754,7 @@
         "id": "5bPq2uG-VcL0"
       },
       "source": [
-        "データの分布を確認する際は、Matplotlib のヒストグラムよりも使い方がシンプルかつ見やすい図を作成することができる `sns.distplot()` がおすすめです。"
+        "データの分布を確認する際は、Matplotlib のヒストグラムよりも使い方がシンプルかつ見やすい図を作成することができる `sns.distplot()` がおすすめである。"
       ]
     },
     {
@@ -800,7 +805,7 @@
         "id": "-16KYq-AVm3Y"
       },
       "source": [
-        "また、描画が完了するまで少し時間がかかってしまいますが、与えられたデータフレームオブジェクトの各列の全てのペアでの散布図をグリッド状に描画し、様々な変数間の相関関係を視覚的に見渡すことができる `plt.pairplot()` も便利です。"
+        "また、描画が完了するまで少し時間がかかってしまいるが、与えられたデータフレームオブジェクトの各列の全てのペアでの散布図をグリッド状に描画し、様々な変数間の相関関係を視覚的に見渡すことができる `plt.pairplot()` も便利である。"
       ]
     },
     {
@@ -851,7 +856,7 @@
         "id": "FYlS6tCdV1F6"
       },
       "source": [
-        "seaborn には他にも様々な種類のグラフを描画する機能があります。"
+        "seaborn には他にも様々な種類のグラフを描画する機能がある。"
       ]
     }
   ]
