Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "temp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQ0Dc29THX5eXHjt0IXzfS",
+      "authorship_tag": "ABX9TyOqcxD2rZ0nc3uHYHddX6Ur",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,23 +25,40 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "dXa77goOb4Nl"
+        "id": "S9sKsK6ls1fk"
       },
       "source": [
-        "# メモ"
-      ]
+        "# 課題\n",
+        "# y= ax*b になるような散布図を描く\n",
+        "# そのために\n",
+        "# 1. y=ax+b のグラフを matplotlibで描く => ベース\n",
+        "# randomの使い方を考える\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j1cxsALptMhK"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4r3BK_q-phSh",
-        "outputId": "488f920e-1aa1-43cb-f578-c6f89c098a99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66
-        }
+        },
+        "outputId": "488f920e-1aa1-43cb-f578-c6f89c098a99"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -51,7 +68,7 @@
         "display(expr)\n",
         "solve((sqrt(2)*x +y)**3 - (expr)**3)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
