--- a/matplotlibtutorials.ipynb
+++ b/matplotlibtutorials.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlibtutorials.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNT7jSpHxrm9Q7wZlKMWC6W",
+      "authorship_tag": "ABX9TyMUhEXu/6BPV5sGWIjJqJ8q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,11 @@
       "source": [
         "# メモ\n",
         "\n",
-        "matplotlib tutorials を利用した matplotlib の実験学習"
+        "matplotlib tutorials を利用した matplotlib の実験学習\n",
+        "\n",
+        "https://matplotlib.org/stable/tutorials/index.html\n",
+        "\n",
+        "&nbsp;\n"
       ]
     },
     {
@@ -55,7 +59,7 @@
         "%%capture\n",
         "!pip install japanize_matplotlib"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +81,7 @@
         "    , verticalalignment='center')\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2146,7 +2150,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2449,22 +2453,22 @@
         "group_names = list(data.keys())\n",
         "group_mean = np.mean(group_data)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "YGGRQvvTD5y5",
-        "outputId": "8c454299-fb02-4d9f-d4d3-d65ac980a550",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8c454299-fb02-4d9f-d4d3-d65ac980a550"
       },
       "source": [
         "print(type(data))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
