Colaboratory を使用して作成しました

--- a/matplotlib01.ipynb
+++ b/matplotlib01.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlib01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPrVJ559WP9s3753iWEJGtD",
+      "authorship_tag": "ABX9TyNYEoNdetliPD1wMqLrcmcl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,16 @@
         "\n",
         "サンプルから学ぶ方法もうまく行っていない。 matplotlib でかかれた図はディープラーニング、AIのが多くてひょっとしたらおもしろいのかもしれないのだが、どうもしっくりこない。\n",
         "\n",
+        "&nbsp;\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "84tzfq9TTiPR"
+      },
+      "source": [
         "アイデア 1. 若干試行錯誤が入ってめんどうなノートになってしまうと思うが実験学習。  \n",
         "アイデア 2. ひとのサイトを読みながら学習する。   \n",
         "アイデア 3. 日本語で考える。 数式で考える。  \n",
@@ -50,7 +60,9 @@
         "1. https://qiita.com/yohm/items/1daa5aabbdb1e8edbf26\n",
         "1. https://www.python.ambitious-engineer.com/archives/2673\n",
         "1. https://tutorials.chainer.org/ja/12_Introduction_to_Matplotlib.html\n",
-        "1. https://aiacademy.jp/media/?p=154\n"
+        "1. https://aiacademy.jp/media/?p=154\n",
+        "\n",
+        "&nbsp;\n"
       ]
     },
     {
@@ -2785,7 +2797,7 @@
         "ax.set_ylabel('entry b')\n",
         "plt.show()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
