Colaboratory を使用して作成しました

--- a/chainer11pandas.ipynb
+++ b/chainer11pandas.ipynb
@@ -45,9 +45,9 @@
       "source": [
         "# Pandas 入門\n",
         "\n",
-        "Pandas はデータ操作によく用いられるパッケージであり、CSV などの一般的なデータ形式で保存されたデータの読み込みや、条件を指定しての一部データの抽出など、機械学習手法で取り扱うデータを整理するのに便利です。\n",
+        "Pandas はデータ操作によく用いられる python のパッケージであり、CSV などの一般的なデータ形式で保存されたデータの読み込みや、条件を指定しての一部データの抽出など、機械学習手法で取り扱うデータを整理するのに便利である。\n",
         "\n",
-        "今回は Pandas の以下の代表的な機能の使い方を説明します。\n",
+        "今回は Pandas の以下の代表的な機能の使い方を説明する。\n",
         "\n",
         "- CSV ファイルの読み書き\n",
         "- 統計量の算出\n",
@@ -58,8 +58,10 @@
         "- ndarray とデータフレームを相互に変換\n",
         "- グラフの描画\n",
         "\n",
-        "まず Pandas パッケージを読み込みましょう。\n",
-        "`pandas` は `pd` という別名を与えて用いるのが一般的です。"
+        "まず Pandas パッケージを読み込む。\n",
+        "`pandas` は `pd` という別名を与えて用いる。\n",
+        "\n",
+        "&nbsp;\n"
       ]
     },
     {
@@ -79,10 +81,15 @@
         "id": "26MTeJHGqx6q"
       },
       "source": [
-        "## CSV ファイルの読み書き\n",
+        "# CSV ファイルの読み書き\n",
         "\n",
-        "データセットは Google Colaboratory で用意されているサンプルデータを使用します。\n",
-        "Google Colaboratory 以外で実行する場合は、[こちら](https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv)をダウンロードして、使用してください。\n",
+        "データセットは Google Colaboratory で用意されているサンプルデータを使用する。\n",
+        "Google Colaboratory 以外で実行する場合は、\n",
+        "\n",
+        "https://download.mlcc.google.com/mledu-datasets/california_housing_train.csv\n",
+        "\n",
+        "をダウンロードして、使用する。\n",
+        "\n",
         "\n"
       ]
     },
@@ -92,8 +99,11 @@
         "id": "0GUo7yjIih3u"
       },
       "source": [
-        "Pandas では CSV ファイルを読み込むための `pd.read_csv()` という関数が用意されています。\n",
-        "こちらを使って CSV ファイルを読み込みます。"
+        "Pandas では CSV ファイルを読み込むための `pd.read_csv()` という関数が用意されている。\n",
+        "\n",
+        "こちらを使って CSV ファイルを読み込む。\n",
+        "\n",
+        "&nbsp;\n"
       ]
     },
     {
@@ -114,8 +124,8 @@
         "id": "k8c9lneAih3y"
       },
       "source": [
-        "`df` という変数名は、**データフレーム (data frame)** という Pandas で中心的に用いられる**データ構造 (data structure)** を表すクラスの名前の頭文字に由来しています。\n",
-        "`pd.read_csv()` 関数は、CSV ファイルの内容を `DataFrame` オブジェクトに読み込みます。"
+        "`df` という変数名は、**データフレーム (data frame)** という Pandas で中心的に用いられる**データ構造 (data structure)** を表すクラスの名前の頭文字に由来している。\n",
+        "`pd.read_csv()` 関数は、CSV ファイルの内容を `DataFrame` オブジェクトに読み込む。"
       ]
     },
     {
@@ -163,8 +173,8 @@
         "id": "Q3BBVv61Zwst"
       },
       "source": [
-        "`df` に読み込まれたデータの中身の確認してみましょう。\n",
-        "Jupyter Notebook 上では、大きな DataFrame を表示しようとすると自動的に一部が省略されることがあります。"
+        "`df` に読み込まれたデータの中身の確認してみる。\n",
+        "Jupyter Notebook 上では、大きな DataFrame を表示しようとすると自動的に一部が省略されることがある。"
       ]
     },
     {
@@ -1098,9 +1108,9 @@
       "source": [
         "## 先頭の数件だけを表示\n",
         "\n",
-        "データを数件のみ確認したい場合は、データフレームがもつ `df.head()` メソッドを使用します。\n",
-        "`df.head()` はデフォルトで先頭から 5 件のデータを表示しますが、`df.head(3)` のように引数に表示したいデータ件数を指定すると、指定された件数だけを表示することもできます。\n",
-        "それでは、`df.head()` を実行してみましょう。"
+        "データを数件のみ確認したい場合は、データフレームがもつ `df.head()` メソッドを使用する。\n",
+        "`df.head()` はデフォルトで先頭から 5 件のデータを表示すが、`df.head(3)` のように引数に表示したいデータ件数を指定すると、指定された件数だけを表示することもできる。\n",
+        "それでは、`df.head()` を実行してみる。"
       ]
     },
     {
@@ -1353,7 +1363,7 @@
         "id": "7uZd00IQ47fg"
       },
       "source": [
-        "特定の列を抽出したい場合は、`df` に対し、Python の辞書オブジェクトに行うように `[]` を使って取り出したい列の名前を指定します。"
+        "特定の列を抽出したい場合は、`df` に対し、Python の辞書オブジェクトに行うように `[]` を使って取り出したい列の名前を指定する。"
       ]
     },
     {
@@ -1396,7 +1406,7 @@
       "source": [
         "## CSV ファイルの保存\n",
         "\n",
-        "Pandas ではデータフレームオブジェクトの内容を CSV ファイルとして保存するための `df.to_csv()` というメソッドが用意されています。"
+        "Pandas ではデータフレームオブジェクトの内容を CSV ファイルとして保存するための `df.to_csv()` というメソッドが用意されている。"
       ]
     },
     {
@@ -1442,7 +1452,7 @@
       "source": [
         "## データフレームの形\n",
         "\n",
-        "データフレームオブジェクトの行数と列数を確認するには、`df.shape()` メソッドを用います。"
+        "データフレームオブジェクトの行数と列数を確認するには、`df.shape()` メソッドを用いる。"
       ]
     },
     {
@@ -1479,8 +1489,8 @@
       "source": [
         "## 統計量の算出\n",
         "\n",
-        "データフレームには、中のデータに対し統計量を計算するためのメソッドも用意されています。\n",
-        "代表的なものを紹介します。"
+        "データフレームには、中のデータに対し統計量を計算するためのメソッドも用意されている。\n",
+        "代表的なものを紹介する。"
       ]
     },
     {
@@ -1602,7 +1612,7 @@
         "id": "z0TJ19egvQv7"
       },
       "source": [
-        "ここで、データの特徴をおおまかに調べるために便利な `df.describe()` メソッドを実行してみましょう。"
+        "ここで、データの特徴をおおまかに調べるために便利な `df.describe()` メソッドを実行してみる。"
       ]
     },
     {
@@ -1800,8 +1810,8 @@
         "id": "bBq3AXbwNzu5"
       },
       "source": [
-        "また、もうひとつ便利なメソッドに相関係数を算出する `df.corr()` があります。\n",
-        "入力変数間や入出力間の相関係数を確認することができます。"
+        "また、もうひとつ便利なメソッドに相関係数を算出する `df.corr()` がある。\n",
+        "入力変数間や入出力間の相関係数を確認することができる。"
       ]
     },
     {
@@ -2016,13 +2026,13 @@
       "source": [
         "## 並べ替え\n",
         "\n",
-        "データフレームのある列を抽出し、`df.sort_values()` メソッドを呼び出すことで値の**並べ替え (sort)** を行うことができます。\n",
-        "なお、このメソッドは並べ替えが終わったあとの値でもとのデータフレーム内の値を置き換えることまでは行わず、結果を返します。\n",
-        "そこで、別の変数で結果を受け取り、始めの 5 行を表示することで並べ替えが行われたことを確認してみましょう。\n",
+        "データフレームのある列を抽出し、`df.sort_values()` メソッドを呼び出すことで値の**並べ替え (sort)** を行うことができる。\n",
+        "なお、このメソッドは並べ替えが終わったあとの値でもとのデータフレーム内の値を置き換えることまでは行わず、結果を返す。\n",
+        "そこで、別の変数で結果を受け取り、始めの 5 行を表示することで並べ替えが行われたことを確認してみる。\n",
         "\n",
-        "`df.sort_values()` は、デフォルトでは**昇順 (ascending)** に並べ替えを行います。昇順とは、だんだん値が大きくなっていくように並べ替えるときの並べ方のことで、逆にだんだん値が小さくなっていくように並べ替えるときは、**降順 (descending)** に並べると言います。\n",
+        "`df.sort_values()` は、デフォルトでは**昇順 (ascending)** に並べ替えを行う。昇順とは、だんだん値が大きくなっていくように並べ替えるときの並べ方のことで、逆にだんだん値が小さくなっていくように並べ替えるときは、**降順 (descending)** に並べると言う。\n",
         "\n",
-        "`df.sort_values()` は並べ替えを行いたい列の名前を `by` という引数で受け取ります。また、デフォルトでは昇順に並べ替えを行います。"
+        "`df.sort_values()` は並べ替えを行いたい列の名前を `by` という引数で受け取る。また、デフォルトでは昇順に並べ替えを行う。"
       ]
     },
     {
@@ -2179,7 +2189,7 @@
         "id": "JvBXPheQxExY"
       },
       "source": [
-        "降順に並べ替える場合は、`ascending=False` という引数の指定を行います。"
+        "降順に並べ替える場合は、`ascending=False` という引数の指定を行う。"
       ]
     },
     {
@@ -2338,14 +2348,14 @@
       "source": [
         "## データの選択\n",
         "\n",
-        "着目したい要素や、行、列を選択する方法を紹介します。\n",
-        "[scikit-learn 入門](https://tutorials.chainer.org/ja/09_Introduction_to_Scikit-learn.html)の章で行ったように、入力値 `x` と目標値 `t` が別の列として同じ配列に格納されている場合は、指定した列だけを取り出す操作を行って、結果を別の変数に代入する操作を行います。\n",
-        "このように、特定の列の選択や列を範囲指定して選択する機能が Pandas のデータフレームにも用意されています。\n",
+        "着目したい要素や、行、列を選択する方法を紹介する。\n",
+        "[scikit-learn 入門](https://tutorials.chainer.org/ja/09_Introduction_to_Scikit-learn.html)の章で行ったように、入力値 `x` と目標値 `t` が別の列として同じ配列に格納されている場合は、指定した列だけを取り出す操作を行って、結果を別の変数に代入する操作を行う。\n",
+        "このように、特定の列の選択や列を範囲指定して選択する機能が Pandas のデータフレームにも用意されている。\n",
         "\n",
-        "今回は最後の列 `median_house_value` と、それ以外の列をそれぞれ取り出して、別々の変数に格納してみましょう。\n",
+        "今回は最後の列 `median_house_value` と、それ以外の列をそれぞれ取り出して、別々の変数に格納してみる。\n",
         "\n",
-        "列や行の選択を行う方法は複数あります。\n",
-        "ここでは、整数インデックスを用いてデータの部分選択を行う `df.iloc[]` を紹介します。"
+        "列や行の選択を行う方法は複数ある。\n",
+        "ここでは、整数インデックスを用いてデータの部分選択を行う `df.iloc[]` を紹介する。"
       ]
     },
     {
@@ -2524,8 +2534,8 @@
         "id": "ZPpt5xaHzacL"
       },
       "source": [
-        "`iloc` には NumPy の ndarray の中の値を部分的に選択するのと同様のスライス表記を用いることができます。\n",
-        "負のインデックスを使い、末尾の要素からの個数を用いて位置指定を行うこともできます。"
+        "`iloc` には NumPy の ndarray の中の値を部分的に選択するのと同様のスライス表記を用いることができる。\n",
+        "負のインデックスを使い、末尾の要素からの個数を用いて位置指定を行うこともできる。"
       ]
     },
     {
@@ -2609,7 +2619,7 @@
         "id": "7TzrpxIL4F-D"
       },
       "source": [
-        "1 行だけ、もしくは 1 列だけ抽出した場合は、**シリーズ (series)** オブジェクトが返されます。"
+        "1 行だけ、もしくは 1 列だけ抽出した場合は、**シリーズ (series)** オブジェクトが返される。"
       ]
     },
     {
@@ -2731,7 +2741,7 @@
         "id": "aiH3wkgD0Z08"
       },
       "source": [
-        "[NumPy 入門](08_Introduction_to_NumPy_ja.ipynb)で紹介したようなスライス記法を用いる際の先頭位置の省略も行えます。"
+        "[NumPy 入門](08_Introduction_to_NumPy_ja.ipynb)で紹介したようなスライス記法を用いる際の先頭位置の省略も行える。"
       ]
     },
     {
@@ -2857,7 +2867,7 @@
         "id": "REu87pQviY_f"
       },
       "source": [
-        "行の数、列の数両方を複数選択した場合、データフレームオブジェクトが返ります。"
+        "行の数、列の数両方を複数選択した場合、データフレームオブジェクトが返る。"
       ]
     },
     {
@@ -2898,9 +2908,9 @@
       "source": [
         "## 条件指定による要素の選択\n",
         "\n",
-        "次に値に対する条件を指定してデータの選択を行う方法を紹介します。\n",
+        "次に値に対する条件を指定してデータの選択を行う方法を紹介する。\n",
         "\n",
-        "簡単のため、まず `median_house_value` 列を選択し、返ってきたシリーズオブジェクトに対して、比較演算子を使って**各要素に対する条件**を指定し、条件を満たすかどうかを全要素に対して調べた結果を取得してみましょう。"
+        "簡単のため、まず `median_house_value` 列を選択し、返ってきたシリーズオブジェクトに対して、比較演算子を使って**各要素に対する条件**を指定し、条件を満たすかどうかを全要素に対して調べた結果を取得してみる。"
       ]
     },
     {
@@ -2955,12 +2965,12 @@
         "id": "OQ5EFadC6nfc"
       },
       "source": [
-        "このように、比較演算子の片方の辺にデータフレームやシリーズをおくと、指定された条件を満たすかどうかを全ての要素に対して計算することができます。\n",
-        "結果は、各要素が条件を満たすか、満たさないかを表す `True`、`False` が各要素の位置に格納されたデータフレームやシリーズとなります。\n",
-        "これを**マスク (mask)** と呼ぶことがあります。\n",
+        "このように、比較演算子の片方の辺にデータフレームやシリーズをおくと、指定された条件を満たすかどうかを全ての要素に対して計算することができる。\n",
+        "結果は、各要素が条件を満たすか、満たさないかを表す `True`、`False` が各要素の位置に格納されたデータフレームやシリーズとなる。\n",
+        "これを**マスク (mask)** と呼ぶことがある。\n",
         "\n",
-        "そして、データフレームやシリーズも NumPy の ndarray と同様に、マスクを使って要素を選択することができます。\n",
-        "上の `mask` を `df` に `[]` を使って与えることで、指定した条件を満たす要素だけを取り出すことができます。"
+        "そして、データフレームやシリーズも NumPy の ndarray と同様に、マスクを使って要素を選択することができる。\n",
+        "上の `mask` を `df` に `[]` を使って与えることで、指定した条件を満たす要素だけを取り出すことができる。"
       ]
     },
     {
@@ -3108,9 +3118,9 @@
       "source": [
         "### 複数の条件指定による要素の選択\n",
         "\n",
-        "複数の条件を組み合わせて要素を選択することも出来ます。\n",
-        "その場合は条件式を `()` でくくって用います。\n",
-        "**論理和 (or)** は `|`、**論理積 (and)** は `&` を用いて表します。"
+        "複数の条件を組み合わせて要素を選択することもできる。\n",
+        "その場合は条件式を `()` でくくって用いる。\n",
+        "**論理和 (or)** は `|`、**論理積 (and)** は `&` を用いて表す。"
       ]
     },
     {
@@ -3483,7 +3493,7 @@
         "id": "fbPB_J8H9ayc"
       },
       "source": [
-        "条件に当てはまる要素を調べる操作と、条件に当てはまる要素の選択まで、1 行にまとめて書くこともできます。"
+        "条件に当てはまる要素を調べる操作と、条件に当てはまる要素の選択まで、1 行にまとめて書くこともできる。"
       ]
     },
     {
@@ -3630,8 +3640,8 @@
       "source": [
         "### 条件指定による要素の置換\n",
         "\n",
-        "条件を指定して選択した要素に対し、値の書き換えを行うことができます。\n",
-        "例えば、`median_house_value` 列に対していくつかの条件を別々に調べ、それぞれの条件を満たしている場合に特定の値を持つような新しい列を `df` に追加してみます。\n",
+        "条件を指定して選択した要素に対し、値の書き換えを行うことができる。\n",
+        "例えば、`median_house_value` 列に対していくつかの条件を別々に調べ、それぞれの条件を満たしている場合に特定の値を持つような新しい列を `df` に追加してみる。\n",
         "`median_house_value` が\n",
         "\n",
         "- 60000 より小さい場合は 0\n",
@@ -3639,9 +3649,9 @@
         "- 70000 以上 80000未満は 2\n",
         "- 80000 以上は 3\n",
         "\n",
-        "となる値を持つ `target` という列を追加します。\n",
+        "となる値を持つ `target` という列を追加する。\n",
         "\n",
-        "まず、何も値の入っていない `target` という列を `df` に追加します。"
+        "まず、何も値の入っていない `target` という列を `df` に追加する。"
       ]
     },
     {
@@ -3804,10 +3814,10 @@
         "id": "JjhWqaChiY_l"
       },
       "source": [
-        "`target` という列の全ての要素は `None` となっています。\n",
-        "この値を、条件指定によって書き換えます。\n",
+        "`target` という列の全ての要素は `None` となっている。\n",
+        "この値を、条件指定によって書き換える。\n",
         "\n",
-        "まず各条件に対応するマスクを作成します。"
+        "まず各条件に対応するマスクを作成する。"
       ]
     },
     {
@@ -3830,8 +3840,8 @@
         "id": "wVdng5KDB5o1"
       },
       "source": [
-        "行や列を整数インデックスで選択する場合は `df.iloc[]` を使用しましたが、**列を名前で指定する**場合には `df.loc[]` を用います。\n",
-        "それでは、上で計算したマスクと名前による列指定を組み合わせて、各条件を満たす行の `target` 列の値を書き換えます。"
+        "行や列を整数インデックスで選択する場合は `df.iloc[]` を使用しましたが、**列を名前で指定する**場合には `df.loc[]` を用いる。\n",
+        "それでは、上で計算したマスクと名前による列指定を組み合わせて、各条件を満たす行の `target` 列の値を書き換える。"
       ]
     },
     {
@@ -3854,7 +3864,7 @@
         "id": "GNUR9M4ZiY_m"
       },
       "source": [
-        "結果を確認してみましょう。"
+        "結果を確認してみる。"
       ]
     },
     {
@@ -4008,10 +4018,10 @@
       "source": [
         "## 欠損値の除去・補間\n",
         "\n",
-        "欠損値を含むデータの場合、一部の行の値が欠損している列に `NaN` (Not a Number)、`None`、`NaT` (Not a Time) などが含まれる場合があります。\n",
-        "欠損値への対策としては、欠損値を含む行、または列を除去するか、欠損値を特定の値で補完するという方法が考えられます。\n",
+        "欠損値を含むデータの場合、一部の行の値が欠損している列に `NaN` (Not a Number)、`None`、`NaT` (Not a Time) などが含まれる場合がある。\n",
+        "欠損値への対策としては、欠損値を含む行、または列を除去するか、欠損値を特定の値で補完するという方法が考えられる。\n",
         "\n",
-        "まずは、欠損値の除去の方法を紹介します。"
+        "まずは、欠損値の除去の方法を紹介する。"
       ]
     },
     {
@@ -4261,10 +4271,10 @@
         "id": "gWpfdlT3E2UE"
       },
       "source": [
-        "上の結果と見比べると、`NaN` を含んでいた 0 行目のデータが取り除かれていることが分かります。\n",
+        "上の結果と見比べると、`NaN` を含んでいた 0 行目のデータが取り除かれていることが分かる。\n",
         "\n",
-        "次に、平均を使った欠損値の補完を行ってみましょう。\n",
-        "まずは、補完に使用する平均値の計算を行います。"
+        "次に、平均を使った欠損値の補完を行ってみる。\n",
+        "まずは、補完に使用する平均値の計算を行う。"
       ]
     },
     {
@@ -4313,7 +4323,7 @@
         "id": "PY4FgpjuiY_o"
       },
       "source": [
-        "計算した各列の値の平均が格納されている `mean` を、`df.fillna()` メソッドに渡すことで、`mean` を用いた欠損値の補完を行うことができます。"
+        "計算した各列の値の平均が格納されている `mean` を、`df.fillna()` メソッドに渡すことで、`mean` を用いた欠損値の補完を行うことができる。"
       ]
     },
     {
@@ -4438,9 +4448,9 @@
         "id": "e0QntVBrFN2o"
       },
       "source": [
-        "0 行目のデータの `longitude` 列に、`mean` の `longitude` 行の値が表示されていることが分かります。\n",
+        "0 行目のデータの `longitude` 列に、`mean` の `longitude` 行の値が表示されていることが分かる。\n",
         "\n",
-        "今回は欠損値が 1 箇所にだけあるデータを用いましたが、`df.dropna()` や `df.fillna()` は、対象の全ての欠損値に対して上記のような操作を行うメソッドです。"
+        "今回は欠損値が 1 箇所にだけあるデータを用いましたが、`df.dropna()` や `df.fillna()` は、対象の全ての欠損値に対して上記のような操作を行うメソッドである。"
       ]
     },
     {
@@ -4451,11 +4461,11 @@
       "source": [
         "## ndarray とデータフレームを相互に変換\n",
         "\n",
-        "scikit-learn では、データフレームやシリーズをそのまま扱うことができます。\n",
-        "しかし、Chainer を含む他のライブラリやフレームワークではそのままでは扱うことができない場合もあります。\n",
-        "そこで、データフレームを NumPy の ndarray に変換する方法を紹介します。\n",
+        "scikit-learn では、データフレームやシリーズをそのまま扱うことができる。\n",
+        "しかし、Chainer を含む他のライブラリやフレームワークではそのままでは扱うことができない場合もある。\n",
+        "そこで、データフレームを NumPy の ndarray に変換する方法を紹介する。\n",
         "\n",
-        "まず、`df` がデータフレームであることを確認します。"
+        "まず、`df` がデータフレームであることを確認する。"
       ]
     },
     {
@@ -4493,7 +4503,7 @@
         "id": "D3y4M9jgiY_p"
       },
       "source": [
-        "次に、`df` の `values` という属性の型を調べてみます。"
+        "次に、`df` の `values` という属性の型を調べてみる。"
       ]
     },
     {
@@ -4531,8 +4541,8 @@
         "id": "iq9-lUeyiY_p"
       },
       "source": [
-        "NumPy の ndarray になっています。\n",
-        "データフレームやシリーズは、`values` という属性に値を ndarray として格納しています。"
+        "NumPy の ndarray になっている。\n",
+        "データフレームやシリーズは、`values` という属性に値を ndarray として格納している。"
       ]
     },
     {
@@ -4640,10 +4650,10 @@
         "id": "ak1--qmKIM-p"
       },
       "source": [
-        "逆に、Python のリストや ndarray からシリーズやデータフレームを作ることもできます。\n",
-        "NumPy で乱数を要素にもつ ndarray を生成し、これをデータフレームに変換してみましょう。\n",
+        "逆に、Python のリストや ndarray からシリーズやデータフレームを作ることもできる。\n",
+        "NumPy で乱数を要素にもつ ndarray を生成し、これをデータフレームに変換してみる。\n",
         "\n",
-        "`pd.DataFrame` のインスタンス化の際に、`data` 引数に元にしたい ndarray を与えます。"
+        "`pd.DataFrame` のインスタンス化の際に、`data` 引数に元にしたい ndarray を与える。"
       ]
     },
     {
@@ -4874,8 +4884,8 @@
       "source": [
         "## グラフの描画\n",
         "\n",
-        "データフレームオブジェクトから直接可視化のための機能を呼び出すことができます。\n",
-        "[次の章](https://tutorials.chainer.org/ja/12_Introduction_to_Matplotlib.html)で紹介する Matplotlib というグラフ描画ライブラリを `df.plot()` 機能を用いて利用することができます。"
+        "データフレームオブジェクトから直接可視化のための機能を呼び出すことができる。\n",
+        "[次の章](https://tutorials.chainer.org/ja/12_Introduction_to_Matplotlib.html)で紹介する Matplotlib というグラフ描画ライブラリを `df.plot()` 機能を用いて利用することができる。"
       ]
     },
     {
@@ -4927,7 +4937,7 @@
         "id": "QYkTAx4IHeFA"
       },
       "source": [
-        "Matplotlib の使い方は、次章で説明します。"
+        "Matplotlib の使い方は、次章で説明する。"
       ]
     }
   ]
