--- a/matplotlib01.ipynb
+++ b/matplotlib01.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlib01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPz/pvRMYQaEY2SMIWejumm",
+      "authorship_tag": "ABX9TyO/+gkdEnmV73+5NeEAFIQ2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
         "%%capture\n",
         "!pip install japanize_matplotlib"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
         "    , verticalalignment='center')\n",
         "plt.show()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -149,7 +149,7 @@
         "plt.plot([0],[1],'b*') # b は青 blue みたいだが黒はなにか? => \"k\"\n",
         "plt.show() # これはなくても描かれるが、あった方がよい"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -187,14 +187,14 @@
       },
       "source": [
         "# ランダムに点を打つ\n",
-        "# np.random.randn() は標準偏差 1 の乱数を発生する\n",
+        "# np.random.randn() は標準偏差 1 の正規分布の乱数を発生する\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "data = np.random.randn(20)\n",
         "plt.plot(data)\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -230,7 +230,7 @@
         "plt.plot(x,y)\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -268,7 +268,7 @@
         "plt.grid()\n",
         "plt.show()"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +314,7 @@
         "ax.plot([0],[3],'ro') # 座標の外に点を打つと表示されない。座標が定義されていないとシステムが適当な座標を作る\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -348,7 +348,7 @@
         "ax[1][1].plot(2,3,'ro') # ゼロベースで数えて 1行 1列のグラフに、座標 (2,3) に赤い丸を打つ\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -377,7 +377,7 @@
       "source": [
         "fig.number"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -420,7 +420,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -472,7 +472,7 @@
         "ax.set_title('Simple plot')\n",
         "plt.show() # plt.show() しなくても図は描けているが、コードセル最後の式の返り値も表示されてしまう\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -514,7 +514,7 @@
         "ax2.scatter(x, y)\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -556,7 +556,7 @@
         "axs[1, 1].scatter(x, y)\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -599,7 +599,7 @@
         "# Note that this is the same as\n",
         "plt.subplots(2, 2, sharex=True, sharey=True)\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,7 +688,7 @@
         "# and clears it if it already exists.\n",
         "fig, ax = plt.subplots(num=10, clear=True)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -717,7 +717,7 @@
       "source": [
         "fig.number"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +755,7 @@
         "print (a.dtype) # データ型 int とか float とか\n",
         "print (a.data)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +826,7 @@
         "ax.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -875,7 +875,7 @@
         "x = symbols('x')\n",
         "plot(x**2,(x,-0.5,0.5)) # rcParams['figure.figsize'] で表示エリアが再度作成されて表示される"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -951,7 +951,7 @@
         "ax.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1016,7 +1016,7 @@
         "print(size)\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1070,7 +1070,7 @@
         "\n",
         "# plt.savefig('data/dst/matplotlib_patches.png')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1138,7 +1138,7 @@
         "plt.title(\"Sample Visualization\")\n",
         "plt.show()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1200,7 +1200,7 @@
         "ax.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1260,7 +1260,7 @@
         "# ax.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
