Colaboratory を使用して作成しました

--- a/colabfeatures.ipynb
+++ b/colabfeatures.ipynb
@@ -33,7 +33,7 @@
       "source": [
         "# メモ\n",
         "\n",
-        "Colab は Web 上に Jupyter の環境を作ったものである。\n",
+        "Colab は Web 上の Jupyter の環境である。\n",
         "\n",
         "ファイルはノートブックと呼ばれ、拡張子は ipynb (ipython notebook) で、フィアル自体はセルのリスト (json ファイル) となっている。\n",
         "\n",
@@ -55,6 +55,8 @@
         "3. セルを実行しながら読む\n",
         "\n",
         "というのが基本的なノートの読み方である。\n",
+        "\n",
+        "&nbsp;\n",
         "\n",
         "サイトに Open in Colab (Colab で開く) ボタンがある場合は簡単に開けるが、そうでない場合は colab.research.google.com に行きそこからファイルやサイトを指定して開く。\n",
         "\n",
@@ -79,12 +81,14 @@
         "\n",
         "次のコードセルを以下のどれかの方法で実行する。 Colabがネットワークと接続されている必要がある。\n",
         "\n",
-        "* 左端の **Play icon** をクリックする。\n",
-        "* キーボードで **Cmd/Ctrl+Enter** をタイプする。\n",
-        "* キーボードで **Shift+Enter** をタイプし、実行と同時にフォーカスを次のセルに移す。\n",
-        "* キーボードで **Alt+Enter** をタイプし、実行と同時に今のセルの下に新たなセルを作成する。\n",
+        "- 左端の丸に右向き三角の実行ボタンをクリックする\n",
+        "- キーボードで Ctrl+Enter をタイプする\n",
+        "- キーボードで Shift+Enter をタイプし、実行と同時にフォーカスを次のセルに移す\n",
+        "- キーボードで Alt+Enter をタイプし、実行と同時に今のセルの下に新たなセルを作成する\n",
         "\n",
-        "メニューのランタイムに、複数もしくは全部のセルを実行するオプションがある。"
+        "メニューのランタイムに、複数もしくは全部のセルを実行するオプションがある。\n",
+        "\n",
+        "&nbsp;"
       ]
     },
     {
@@ -93,28 +97,22 @@
         "cellView": "both",
         "id": "WUtu4316QSHL",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3cd51e74-141c-43df-820a-1611f0d11ceb"
+        "outputId": "0adc7e47-7e6c-4a6c-957b-650f491c1e19"
       },
       "source": [
-        "a = 18\n",
-        "a"
+        "a = \"よろしくっ!!!!\"\n",
+        "print(a)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "18"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
+          "output_type": "stream",
+          "text": [
+            "よろしくっ!!!!\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -124,38 +122,18 @@
         "id": "Id6tDF1HQSHD"
       },
       "source": [
-        "## テキストセル\n",
-        "これは **text cell** である。テキストセルを編集するには **double-click** する。\n",
+        "# テキストセルの編集方法\n",
         "\n",
-        "テキストセルはマークダウンをつかうので、 [markdown\n",
-        "guide](/notebooks/markdown_guide.ipynb)を参照して下さい。\n",
+        "これはテキストセルである。テキストセルを編集するにはセルを選択して Enter を押すか、ダブルクリックする。\n",
         "\n",
+        "テキストセルはマークダウンを使う。 \n",
         "\n",
-        "数式や数学を扱うには、 [LaTeX](http://www.latex-project.org/) で記述すれば、 [MathJax](https://www.mathjax.org) で処理されて書くことができる。 数式を **\\$** 記号で囲む。例えば、 `$\\sqrt{3x-1}+(1+x)^2$` は\n",
-        "$\\sqrt{3x-1}+(1+x)^2.$ になる。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7bqjkGKwQSHW"
-      },
-      "source": [
-        "## セルの追加と移動\n",
-        "マウスをセルとセルの間に持っていくと、 **+コード** と **+テキスト** というボタンが現れる。このボタンはノートブックの上部にあるツールバー上にもありり、対象となっているセルの下にコードセルやテキストセルを追加する。\n",
+        "数式や数学を扱うには、LaTeX (MathJax) で書くことができる。 数式を **\\$** 記号で囲む。例えば、 `$\\sqrt{3x-1}+(1+x)^2$` は\n",
+        "$\\sqrt{3x-1}+(1+x)^2$ になる。\n",
         "\n",
-        "セルの移動はセルの上部にある **↑** と **↓** で動かすことができる。\n",
+        "htmlタグは保証されていない。 基本的には使えない。\n",
         "\n",
-        "連続したセルはセルの外側から囲むことで一度の選択することができる。連続していないセルはCtrlキーを押しながらクリックすることで選択できる。Shiftを押しながらクリックすると2つのセルの間にあるセルも含めて選択される。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SjOnxC09ZSLt"
-      },
-      "source": [
-        "# いまここ"
+        "&nbsp;"
       ]
     },
     {
@@ -164,10 +142,7 @@
         "id": "GOwlZRXEQSHZ"
       },
       "source": [
-        "# Python プログラムの実行\n",
-        "Colab は [Jupyter Notebook](https://jupyter.org/) をもとにつくらてている。\n",
-        "\n",
-        "以下に便利な機能を紹介する。"
+        "# Python プログラムの実行\n"
       ]
     },
     {
@@ -178,16 +153,9 @@
       "source": [
         "時間のかかる処理は中断(インターラプト)することができる。\n",
         "\n",
-        "**ランタイム -> 実行を中断** (またはキーボードショートカット *Cmd/Ctrl-M I* )で処理の実行は中断される。\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5GSa59VaOeeS"
-      },
-      "source": [
-        ""
+        "メニューのランタイム -> 実行を中断 (Cntl+M I) で処理の実行を中断できる。\n",
+        "\n",
+        "次のコードセルで実験する。\n"
       ]
     },
     {
@@ -196,36 +164,26 @@
         "cellView": "both",
         "id": "d-S-3nYLQSHb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 233
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "95f4d4f1-292a-4205-852a-f49031eea47c"
+        "outputId": "e3a78844-57f4-4984-8d0d-4a980db6cea7"
       },
       "source": [
+        "# 実験 time.sleep の引数を 30 にして実行し、中断してみること\n",
         "import time\n",
         "print(\"Sleeping\")\n",
-        "time.sleep(30) # sleep for a while; interrupt me!\n",
+        "time.sleep(1) # sleep for a while; interrupt me!\n",
         "print(\"Done Sleeping\")"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Sleeping\n"
+            "Sleeping\n",
+            "Done Sleeping\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-fb6d98dc021a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Sleeping\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# sleep for a while; interrupt me!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Done Sleeping\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
     },
@@ -235,9 +193,9 @@
         "id": "Wej_mEyXQSHc"
       },
       "source": [
-        "## システムコマンド (System aliases)\n",
+        "# システムコマンド (System aliases)\n",
         "\n",
-        "Jupyter は `ls` のようなシステム処理を Jupyter 上で実行することができる。"
+        "Colab は `ls` のようなシステム処理を Colab 上で実行することができる。"
       ]
     },
     {
@@ -260,14 +218,21 @@
       "source": [
         "たぶん、`!ls` は大きな出力になってしまったと思う。\n",
         "\n",
-        "出力を消去するには2つの方法がある。\n",
+        "出力を消去するには 3つの方法がある。\n",
         "\n",
-        "1. 出力のセルの`(x)`ボタンをクリックする。\n",
-        "2. 出力セルの左側にあるを右クリックし、コンテキストメニューを表示し、\"出力を消去\"を選ぶ。\n",
-        "3. セルを選択し、セル上部にあるの三点メニューで\"出力を消去\"を選ぶ。\n",
+        "1. 出力のセルの`(x)`ボタンをクリックする\n",
+        "2. 出力セルの左側の枠を右クリックし、コンテキストメニューを表示し、\"出力を消去\"を選ぶ\n",
+        "3. セルを選択し、セル上部にあるの三点メニューで\"出力を消去\"を選ぶ\n",
         "\n",
-        "Execute any other process using `!` with string interpolation from python variables, and note the result can be assigned to a variable:\n",
-        "\n",
+        "&nbsp;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HjZrf71xVUFs"
+      },
+      "source": [
         "次の例では、`!`とエスケープ文字列を使って、python上の変数を処理した結果を変数に入れている。\n"
       ]
     },
@@ -277,17 +242,16 @@
         "cellView": "both",
         "id": "zqGrv0blQSHj",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 101
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "96ab6740-89a1-4808-bce6-df5242b57017"
+        "outputId": "9251efd2-4916-4bf2-81b4-ad44567580c8"
       },
       "source": [
         "message = 'Colaboratory is \\ngreat!'\n",
         "foo = !echo -e '$message\\n$message\\t$message'\n",
         "foo"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,7 +267,31 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TR5BB1HbVlVh",
+        "outputId": "45d24955-1faa-4b90-ffb4-8132c6903391",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = 3\n",
+        "!echo  '$x'"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -609,6 +597,68 @@
         "You can resolve and reply to comments, and you can target comments to specific collaborators by typing *+[email address]* (e.g., `+user@domain.com`). Addressed collaborators will be emailed. \n",
         "\n",
         "The Comment button in the top-right corner of the page shows all comments attached to the notebook."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZEW13ldhchV0"
+      },
+      "source": [
+        "# ファイルの読み書き\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sHYD4WFmdbfE",
+        "outputId": "f0322940-c85e-4772-c99a-8359615a3136",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile temp.txt\n",
+        "This is not a pen\n",
+        "this ia an apple.\n",
+        "ok"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing temp.txt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c9n1c8a6dg2q",
+        "outputId": "abbbbc42-4759-4024-9136-a46db297eadb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "myfile=open('temp.txt')\n",
+        "lines=myfile.read()\n",
+        "print(lines)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "This is not a pen\n",
+            "this ia an apple.\n",
+            "ok\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
