--- a/colabfeatures.ipynb
+++ b/colabfeatures.ipynb
@@ -6,7 +6,6 @@
       "name": "colabfeatures",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +104,7 @@
         "a = \"よろしくっ!!!!\"\n",
         "print(a)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +174,7 @@
         "time.sleep(1) # sleep for a while; interrupt me!\n",
         "print(\"Done Sleeping\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +250,7 @@
         "foo = !echo -e '$message\\n$message\\t$message'\n",
         "foo"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,16 +274,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "TR5BB1HbVlVh",
-        "outputId": "45d24955-1faa-4b90-ffb4-8132c6903391",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "45d24955-1faa-4b90-ffb4-8132c6903391"
       },
       "source": [
         "x = 3\n",
         "!echo  '$x'"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,12 +300,12 @@
         "id": "qM4myQGfQboQ"
       },
       "source": [
-        "## マジック (Magics)\n",
-        "ColabではJupyterのマジックの考え方が使える。\n",
-        "マジックにより、セルのテキストの処理方法を簡単に変えることができる。\n",
-        "Jupyter のマジックについては [Jupyter's magics page](http://nbviewer.jupyter.org/github/ipython/ipython/blob/1.x/examples/notebooks/Cell%20Magics.ipynb) を参照してください。\n",
+        "# マジック (Magics)\n",
+        "ColabではJupyterのマジックが使える。\n",
         "\n",
-        "Colaboratory shares the notion of magics from Jupyter. There are shorthand annotations that change how a cell's text is executed. To learn more, see [Jupyter's magics page](http://nbviewer.jupyter.org/github/ipython/ipython/blob/1.x/examples/notebooks/Cell%20Magics.ipynb). \n"
+        "マジックにより、セルのテキストの処理方法を簡単に変えることができる。\n",
+        "\n",
+        "&nbsp;"
       ]
     },
     {
@@ -321,6 +320,7 @@
         "outputId": "9027db44-5688-472a-9d5f-035c432beeb8"
       },
       "source": [
+        "# html が使える\n",
         "%%html\n",
         "<marquee style='width: 30%; color: slategrey;' behavior=\"alternate\"><b>Whee!</b></marquee>"
       ],
@@ -353,6 +353,7 @@
         "outputId": "faf04608-fb3c-4c22-d488-d2cc71664d19"
       },
       "source": [
+        "# html 内で svg が使える\n",
         "%%html\n",
         "<div style=\"text-align: center;\">\n",
         "<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 450 400\" width=\"200\" height=\"200\">\n",
@@ -385,131 +386,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "d4L9TOP9QSHn"
+        "id": "0N1nT2aljyB_"
       },
       "source": [
-        "## Tab-completion and exploring code\n",
+        "# Tab 補完とヘルプ\n",
         "\n",
-        "Colab provides tab completion to explore attributes of Python objects, as well as to quickly view documentation strings. As an example, first run the following cell to import the  [`numpy`](http://www.numpy.org) module."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "both",
-        "id": "Q0JKWcmtQSHp"
-      },
-      "source": [
-        "import numpy as np"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1M890-bXeyYp"
-      },
-      "source": [
-        "If you now insert your cursor after ``np.random.`` and press **Tab**, you will see the list of available completions within the ``np.random`` submodule."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "both",
-        "id": "j6QRIfUHQSHq"
-      },
-      "source": [
-        "np.random."
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "g6MfomFhQSHs"
-      },
-      "source": [
-        "If you type an open parenthesis followed by the **Tab** key after any function or class in the module, you will see a pop-up of its documentation string:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "both",
-        "id": "SD0XnrVhQSHt"
-      },
-      "source": [
-        "np.random.rand("
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9ReRLQaxJ-zP"
-      },
-      "source": [
-        "To open the documentation in a persistent pane at the bottom of your screen, add a **?** after the object or method name and execute the cell using **Shift+Enter**:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "both",
-        "id": "YgQ6Tu7DK17l"
-      },
-      "source": [
-        "np.random?"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TYTBdJXxfqiJ"
-      },
-      "source": [
-        "## Exception Formatting"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4bqAVK-aQSHx"
-      },
-      "source": [
-        "Exceptions are formatted nicely in Colab outputs:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "both",
-        "id": "CrJf1PEmQSHx",
-        "outputId": "a8c7a413-a1e6-49f1-c7b5-58986eff5047"
-      },
-      "source": [
-        "x = 1\n",
-        "y = 4\n",
-        "z = y/(1-x)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ZeroDivisionError",
-          "evalue": "",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-14-dc39888fd1d2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[1;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
-          ]
-        }
+        "コードセルの中では python のコマンドについて、Tab 補完が効く。 \n",
+        "\n",
+        "`np.random.rand(`\n",
+        "\n",
+        "とかで Tab を押すとポップアップドキュメントが見られる。\n",
+        "\n",
+        "np.random.rand?\n",
+        "\n",
+        "でヘルプが見られる。\n",
+        "\n",
+        "dir(np.random) \n",
+        "\n",
+        "で使えるメソッド (関数) の一覧が出力される。\n",
+        "\n",
+        "&nbsp;\n"
       ]
     },
     {
@@ -518,8 +414,20 @@
         "id": "7cRnhv_7N4Pa"
       },
       "source": [
-        "## Rich, interactive outputs\n",
-        "Until now all of the generated outputs have been text, but they can be more interesting, like the chart below. "
+        "# matplotlib\n",
+        "\n",
+        "matplotlib で多彩な出力が得られる。\n",
+        "\n",
+        "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n9zSxj7mlU-D"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -612,10 +520,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sHYD4WFmdbfE",
-        "outputId": "f0322940-c85e-4772-c99a-8359615a3136",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f0322940-c85e-4772-c99a-8359615a3136"
       },
       "source": [
         "%%writefile temp.txt\n",
@@ -623,7 +531,7 @@
         "this ia an apple.\n",
         "ok"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,17 +546,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "c9n1c8a6dg2q",
-        "outputId": "abbbbc42-4759-4024-9136-a46db297eadb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "abbbbc42-4759-4024-9136-a46db297eadb"
       },
       "source": [
         "myfile=open('temp.txt')\n",
         "lines=myfile.read()\n",
         "print(lines)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
