--- a/colabfeatures.ipynb
+++ b/colabfeatures.ipynb
@@ -6,6 +6,7 @@
       "name": "colabfeatures",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,9 +124,11 @@
       "source": [
         "# テキストセルの編集方法\n",
         "\n",
-        "これはテキストセルである。テキストセルを編集するにはセルを選択して Enter を押すか、ダブルクリックする。\n",
+        "これはテキストセルである。\n",
         "\n",
-        "テキストセルはマークダウンを使う。 \n",
+        "テキストセルを編集するにはセルを選択して Enter を押すか、ダブルクリックする。\n",
+        "\n",
+        "テキストセルはマークダウンを使って書く。 \n",
         "\n",
         "数式や数学を扱うには、LaTeX (MathJax) で書くことができる。 数式を **\\$** 記号で囲む。例えば、 `$\\sqrt{3x-1}+(1+x)^2$` は\n",
         "$\\sqrt{3x-1}+(1+x)^2$ になる。\n",
