Colaboratory を使用して作成しました

--- a/colabfeatures.ipynb
+++ b/colabfeatures.ipynb
@@ -395,7 +395,7 @@
         "id": "3OQSbZN8CD_x"
       },
       "source": [
-        "# 出力を抑制 %%capture\n",
+        "# 出力を抑制  suppress outpu => %%capture\n",
         "%%capture\n",
         "dir()"
       ],
